--- a/Cards/README
+++ b/Cards/README
@@ -2,3 +2,7 @@ Create an enum to represent the suits in a deck of playing cards (CLUBS, DIAMOND
 Create a PlayingCard class. Each playing card has a number (from 1 to 13) and a suit. 
 In the numbering scheme, 11 stands for JACK, 12 stands for QUEEN, 13 for KING. 
 Write code that creates several cards and displays them on the screen.
+
+
+This project was later updated to create a static field that keeps track of the number of times the class constructor has been called,
+thus having a count on the number of playing cards.
